particles disappear after rendering #40403

Closed
opened 2014-05-28 08:29:17 +02:00 by S S · 12 comments

System Information
Windows 7 64bit, GTX 660ti

Blender Version
Broken: 2.70 64bit 06a05e4, 2.70a
Worked: haven't found

Short description of error
I don't know whether it's a bug. I create a particle system, and set it to render as object. Then after rendering, the particles system disappear in the viewport.

Exact steps for others to reproduce the error
1, open the file
2, just hit F12 to render
3, after rendering press Esc to go back to 3D view editor. Then you will find the particles disappear.

File:particles_bug.blend

**System Information** Windows 7 64bit, GTX 660ti **Blender Version** Broken: 2.70 64bit 06a05e4, 2.70a Worked: haven't found **Short description of error** I don't know whether it's a bug. I create a particle system, and set it to render as object. Then after rendering, the particles system disappear in the viewport. **Exact steps for others to reproduce the error** 1, open the file 2, just hit F12 to render 3, after rendering press Esc to go back to 3D view editor. Then you will find the particles disappear. File:[particles_bug.blend](https://archive.blender.org/developer/F91687/particles_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @b1657022405

Added subscriber: @b1657022405

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note:

  • If the text is visible in the viewport, this works properly.
  • Issue is caused by render calling BKE_object_free_derived_caches on Text
  • Returning to the viewport Text remains without valid ob->curve_cache and ob->bb is NULL.
  • Attempting to add a data relation to the depsgraph build_dag_object fixed the 3d view and breaks rendering.

Tested this, though not sure its correct.

   diff --git a/source/blender/blenkernel/intern/depsgraph.c b/source/blender/blenkernel/intern/depsgraph.c
   index 2157909..7ff0e1e 100644
     - a/source/blender/blenkernel/intern/depsgraph.c
   +++ b/source/blender/blenkernel/intern/depsgraph.c
   @@ -752,6 +752,8 @@ static void build_dag_object(DagForest *dag, DagNode *scenenode, Scene *scene, O
    				dag_add_relation(dag, node, node2, DAG_RL_OB_OB, "Particle Object Visualization");
    				if (part->dup_ob->type == OB_MBALL)
    					dag_add_relation(dag, node, node2, DAG_RL_DATA_DATA, "Particle Object Visualization");
   +				else
   +					dag_add_relation(dag, node2, node,  DAG_RL_OB_DATA, "Particle Object Visualization");
    			}
    
    			if (part->ren_as == PART_DRAW_GR && part->dup_group) {
Note: - If the text is visible in the viewport, this works properly. - Issue is caused by render calling `BKE_object_free_derived_caches` on `Text` - Returning to the viewport `Text` remains without valid `ob->curve_cache` and `ob->bb` is NULL. - Attempting to add a data relation to the depsgraph `build_dag_object` fixed the 3d view and breaks rendering. Tested this, though not sure its correct. ``` diff --git a/source/blender/blenkernel/intern/depsgraph.c b/source/blender/blenkernel/intern/depsgraph.c index 2157909..7ff0e1e 100644 ``` - a/source/blender/blenkernel/intern/depsgraph.c ``` +++ b/source/blender/blenkernel/intern/depsgraph.c @@ -752,6 +752,8 @@ static void build_dag_object(DagForest *dag, DagNode *scenenode, Scene *scene, O dag_add_relation(dag, node, node2, DAG_RL_OB_OB, "Particle Object Visualization"); if (part->dup_ob->type == OB_MBALL) dag_add_relation(dag, node, node2, DAG_RL_DATA_DATA, "Particle Object Visualization"); + else + dag_add_relation(dag, node2, node, DAG_RL_OB_DATA, "Particle Object Visualization"); } if (part->ren_as == PART_DRAW_GR && part->dup_group) {

This issue was referenced by 6bb459f6d7

This issue was referenced by 6bb459f6d7574d5cbe1ed9ad3470b5a802c3f843

Added subscriber: @Sergey

Added subscriber: @Sergey

@ideasman42, the change is incorrect, it adds a dependency cycle.

@ideasman42, the change is incorrect, it adds a dependency cycle.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6bb459f6d7.

Closed by commit 6bb459f6d7.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Just a note: This may fix the curve cache issue, but eventually we have to get rid of that bogus dependency. Using a depsgraph hack to fix a design error in Blender Internal can't be the right thing to do ...

Just a note: This may fix the curve cache issue, but eventually we have to get rid of that bogus dependency. Using a depsgraph hack to fix a design error in Blender Internal can't be the right thing to do ...
Member
Specifically, this section is never entered in BI code when using the correct dependency. https://developer.blender.org/diffusion/B/browse/master/source/blender/render/intern/source/convertblender.c;5a7b049a940bc120c5e9734f3ae2545c8ccc93f0$4990
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40403
No description provided.