Fix T40403: Particles disappear after rendering

Read the comment in ensure_curve_cache, it tells it all.